--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commander": "^8.1.0",
     "cosmiconfig": "^7.0.0",
     "execa": "^5.1.1",
+    "inquirer": "^8.1.2",
     "node-emoji": "^1.11.0"
   },
   "devDependencies": {
