chore: Add repository field to package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pushup-cli",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Automatically push remote git branches that follow your team's standard.",
   "author": "Zach Posten <https://github.com/zposten>",
   "license": "MIT",
+  "repository": "https://github.com/zposten/pushup-cli",
   "private": false,
   "files": [
     "src/**/*.js"
