docs(readme): Clarify some text

--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "branch",
     "management",
     "remote",
+    "upstream",
+    "origin",
     "push",
+    "up",
     "team",
     "standard",
     "standards",
